; ModuleID = '/home/carl/AnghaBench/kphp-kdb/net/extr_net-msg.c_rwm_fetch_lookup.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/net/extr_net-msg.c_rwm_fetch_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.raw_message = type { i32 }

@rwm_process_memcpy = common dso_local global i32 0, align 4
@rwm_process_nop = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rwm_fetch_lookup(%struct.raw_message* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.raw_message*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.raw_message* %0, %struct.raw_message** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i8*, i8** %6, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %10, label %15

10:                                               ; preds = %3
  %11 = load %struct.raw_message*, %struct.raw_message** %5, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* @rwm_process_memcpy, align 4
  %14 = call i32 @rwm_process(%struct.raw_message* %11, i32 %12, i32 %13, i8** %6)
  store i32 %14, i32* %4, align 4
  br label %20

15:                                               ; preds = %3
  %16 = load %struct.raw_message*, %struct.raw_message** %5, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* @rwm_process_nop, align 4
  %19 = call i32 @rwm_process(%struct.raw_message* %16, i32 %17, i32 %18, i8** null)
  store i32 %19, i32* %4, align 4
  br label %20

20:                                               ; preds = %15, %10
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i32 @rwm_process(%struct.raw_message*, i32, i32, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
